Add some more edits

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Hero Section -->
     <section class="bg-stone-50 py-12">
         <div class="container mx-auto text-center">
-            <img src="assets\img\profilepic.png" alt="Naomi Serkez" class="w-32 h-32 mx-auto rounded-full">
+            <!-- <img src="assets\img\profilepic.png" alt="Naomi Serkez" class="w-32 h-32 mx-auto rounded-full"> -->
             <h2 class="text-4xl font-bold text-stone-900">Hi, I'm Naomi</h2>
             <p class="text-stone-600 mt-4">...</p>
             <a href="#projects"
@@ -62,8 +62,39 @@
             <h2 class="text-3xl font-bold text-stone-800 text-center">What I've Done</h2>
 
             <!-- Work Section -->
-            <div id="work" class="mt-12">
+            <!-- <div id="work" class="mt-12">
                 <h3 class="text-2xl font-semibold text-stone-800">Some of what I've done</h3>
+                <div class="grid gap-6 mt-8 sm:grid-cols-2 lg:grid-cols-3">
+                    <div class="bg-white shadow-md rounded-lg overflow-hidden">
+                        <img src="" alt="EZ" class="w-full">
+                        <div class="p-4">
+                            <h3 class="font-bold text-lg">Data Analyst at EZContacts</h3>
+                            <p class="text-stone-600 mt-2">I created .</p>
+                            <a href="https://koena.health" class="text-orange-500 hover:underline mt-2 block"
+                                target="_blank">Visit Koena</a>
+                        </div>
+                    </div>
+                    <div class="bg-white shadow-md rounded-lg overflow-hidden">
+                        <img src="assets/img/acc.svg" alt="Art Center Canvas" class="w-full">
+                        <div class="p-4">
+                            <h3 class="font-bold text-lg">Intern at Art Center Canvas</h3>
+                            <p class="text-stone-600 mt-2">I supported customers with custom code and reports,
+                                implemented testing into a codebase and created new features with Vue.js.</p>
+                             <a href="https://artcentercanvas.com/" class="text-blue-500 hover:underline mt-2 inline-block">Visit Art Center Canvas</a> ->
+                            <a href="https://www.linkedin.com/in/naomiserkez/details/experience/"
+                                class="text-orange-500 hover:underline mt-2 inline-block" target="_blank">Learn More</a>
+                        </div>
+                    </div>
+                </div> -->
+                <!-- <button id="work-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show More</button> -->
+                <div id="work-extra" class="hidden">
+                     Additional Work items go here -->
+                <!-- </div> -->
+            </div>
+
+            <!-- Projects Section -->
+            <div id="projects" class="mt-12">
+                <h3 class="text-2xl font-semibold text-stone-800">Projects</h3>
                 <div class="grid gap-6 mt-8 sm:grid-cols-2 lg:grid-cols-3">
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
                         <img src="assets/img/essential_oil_background.jpeg" alt="Koena" class="w-full">
@@ -75,28 +106,6 @@
                                 target="_blank">Visit Koena</a>
                         </div>
                     </div>
-                    <div class="bg-white shadow-md rounded-lg overflow-hidden">
-                        <img src="assets/img/acc.svg" alt="Art Center Canvas" class="w-full">
-                        <div class="p-4">
-                            <h3 class="font-bold text-lg">Intern at Art Center Canvas</h3>
-                            <p class="text-stone-600 mt-2">I supported customers with custom code and reports,
-                                implemented testing into a codebase and created new features with Vue.js.</p>
-                            <!-- <a href="https://artcentercanvas.com/" class="text-blue-500 hover:underline mt-2 inline-block">Visit Art Center Canvas</a> -->
-                            <a href="https://www.linkedin.com/in/naomiserkez/details/experience/"
-                                class="text-orange-500 hover:underline mt-2 inline-block" target="_blank">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- <button id="work-toggle" class="text-orange-500 hover:underline mt-4 block mx-auto">Show More</button>
-                <div id="work-extra" class="hidden">
-                     Additional Work items go here -->
-                <!-- </div> -->
-            </div>
-
-            <!-- Projects Section -->
-            <div id="projects" class="mt-12">
-                <h3 class="text-2xl font-semibold text-stone-800">Projects</h3>
-                <div class="grid gap-6 mt-8 sm:grid-cols-2 lg:grid-cols-3">
                     <div class="bg-white shadow-md rounded-lg overflow-hidden">
                         <img src="assets/img/polyomino1.jpeg" alt="Hackathon" class="w-full">
                         <div class="p-4">
